--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -179,7 +179,7 @@ color:white
         border: none;
         border-radius: 10px;
         box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.4) ;
-        
+    
    }
 
    .linkeable{
@@ -190,5 +190,25 @@ color:white
    }
 
    .imagen-box{
-       height: 50px;
+       height: 45px;
+       margin-left: -4px;
+       margin-top: 9px;
    }
+
+   .butG {
+        background-color: #62D2A2;
+        box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.4) ;
+        border-color:none;
+        width: 100%;
+        height: 100%;
+        text-shadow: 2px 2px rgba(0,0,0,0.3); 
+        color:white
+        font-weight: bolder;
+        font-style: oblique;
+  }
+
+.img-icon{
+    width: 90px;
+    color: black;
+    margin-top: 20px;
+}
