--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -55,6 +55,13 @@ word-wrap: normal;
 white-space: nowrap;
 direction: ltr;
 }
+.switch_control{
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 25px;
+  color: white;
+  
+  }
 
 /* Geri */
 
