--- a/src/main/resources/templates/vistaPrincipal.html
+++ b/src/main/resources/templates/vistaPrincipal.html
@@ -42,7 +42,7 @@
           </div>
         </div>
         <div class="col-11">
-          <a th:href="@{/tarea/Mañana}" method="get" class="fs-2 btn butG btn-lg btn-success">Mañana</a>
+          <a th:href="@{/tarea/mañana}" method="get" class="fs-2 btn butG btn-lg btn-success">Mañana</a>
         </div>
       </div>
     </div>
