--- a/src/main/resources/templates/tareas.html
+++ b/src/main/resources/templates/tareas.html
@@ -19,6 +19,8 @@
 
 
 <body class="bodyIndex">
+
+    <nav th:replace="template.html :: nav"></nav>
     <div class="container-lg col-6 my-5 borderedit">
 
         <header>
