--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -2,104 +2,102 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Google Font Pacifico -->
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Google Font Pacifico -->
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/css/styles.css" th:href="@{/css/styles.css}">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="../static/css/styles.css" th:href="@{/css/styles.css}">
   <title>Registro</title>
 </head>
 
-<header class="headerRegistro p-2">
-  <div class="container">
-    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-      <a th:href="@{/}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-        <img th:src="@{/img/logo2.png}" class=" imgreg img-fluid" alt="Logo Pomodoro">
-      </a>
 
-      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li><a th:href="@{/}" class="linkheader nav-link px-2 text-white ">Pomodoro app</a></li>
-      </ul>
-
-      <div class="text-end">
-        <a class="text-decoration-none" th:href="@{/login}"><button type="button" class="but btn-success btn-toolbar rounded">Iniciar Sesión</button></a>
-      </div>
-    </div>
-  </div>
-</header>
-
-<br>
 
 <body class="bodyIndex">
 
-  <div class="borderedit container col-4 px-5 py-4 ">
+  <div class="borderedit container mt-5">
 
-    <form th:action="@{/registrar}" method="post">
+    <div class="row">
+      <div class="col-8 py-3">
 
-      <div class="col mb-2">
-        <h3 class="text-decoration-underline text-center titulo">Registro</h3>
+        <form th:action="@{/registrar}" method="post">
+
+          <div class="col-8 container-fluid">
+            <h1 class="text-decoration-underline titulo text-center">Registro</h1>
+            <div class="container col-sm-8 text-danger">
+              <p th:if="${error!=null}" th:text="${error}"></p>
+            </div>
+            <div class="col mb-2">
+              <label for="inputEmail3" class="col-sm-2 col-form-label pre-control">Nombre*</label>
+              <div class="col-sm-12 borderbox">
+                <input type="text" class="form-control" id="Nombre" name="nombre">
+              </div>
+            </div>
+
+            <div class="col mb-2">
+              <label for="inputEmail3" class="col-sm-2 col-form-label pre-control">Apellido*</label>
+              <div class="col-sm-12  borderbox">
+                <input type="text" class="form-control" id="Apellido" name="apellido">
+              </div>
+            </div>
+
+            <div class="col mb-2">
+              <label for="inputEmail3" class="col-sm-2 col-form-label pre-control">Email*</label>
+              <div class="col-sm-12  borderbox">
+                <input type="email" class="form-control" id="Mail" name="email">
+              </div>
+            </div>
+
+            <div class="col mb-2">
+              <label for="inputPassword3" class="col-sm-2 col-form-label pre-control">Contraseña*</label>
+              <div class="col-sm-12 borderbox">
+                <input type="password" class="form-control" id="Contraseña1" name="contrasena1">
+              </div>
+            </div>
+
+            <div class="col mb-2">
+              <label for="inputPassword3" class="col-sm-8 col-form-label pre-control">Repita Contraseña*</label>
+              <div class="col-sm-12 borderbox">
+                <input type="password" class="form-control" id="Contraseña2" name="contrasena2">
+              </div>
+            </div>
+            <div class="col my-3">
+              <p class="text-secondary text-start">*(Campos obligatorios)</p>
+            </div>
+            <div class="col my-3 d-grid gap-2 col-12">
+              <button type="submit" class="but btn btn-success">Enviar</button>
+            </div>
+
+            <div class="col-sm-12 text-center">
+              <a th:href="@{/login}" class="link-primary">¿Ya estas registrado? Iniciar Sesión</a>
+            </div>
+          </div>
+
+        </form>
       </div>
-      <div class="container col-sm-12 text-danger">
-        <p th:if="${error!=null}" th:text="${error}"></p>
+      <div class="col-4 py-5 imgregister">
+        <a th:href="@{/}" class="link">
+          <img src="../static/img/logo2.png" th:src="@{/img/logo2.png}" class=" img-fluid" alt="Logo Pomodoro">
+        </a>
+        <ul class="nav col-12 justify-content-center">
+          <li><a th:href="@{/}" class="linkheader px-2 text-white fs-1">Pomodoro app</a>
+          </li>
+        </ul>
       </div>
-      <div class="container">
-        <div class="col mb-2">
-          <label for="inputEmail3" class="col-sm-2 col-form-label pre-control">Nombre*</label>
-          <div class="col-sm-12 borderbox">
-            <input  type="text" class="form-control" id="Nombre" name="nombre">
-          </div>
-        </div>
+    </div>
 
-        <div class="col mb-2">
-          <label for="inputEmail3" class="col-sm-2 col-form-label pre-control">Apellido*</label>
-          <div class="col-sm-12  borderbox">
-            <input type="text" class="form-control" id="Apellido" name="apellido">
-          </div>
-        </div>
+  </div>
 
-        <div class="col mb-2">
-          <label for="inputEmail3" class="col-sm-2 col-form-label pre-control">Email*</label>
-          <div class="col-sm-12  borderbox">
-            <input type="email" class="form-control" id="Mail" name="email">
-          </div>
-        </div>
 
-        <div class="col mb-2">
-          <label for="inputPassword3" class="col-sm-2 col-form-label pre-control">Contraseña*</label>
-          <div class="col-sm-12 borderbox">
-            <input type="password" class="form-control" id="Contraseña1" name="contrasena1">
-          </div>
-        </div>
-
-        <div class="col mb-2">
-          <label for="inputPassword3" class="col-sm-8 col-form-label pre-control">Repita Contraseña*</label>
-          <div class="col-sm-12 borderbox">
-            <input type="password" class="form-control" id="Contraseña2" name="contrasena2">
-          </div>
-        </div>
-        <div class="container">
-          <p class="obs pre-control">*(Campos obligatorios)</p>
-        </div>
-        <div class="col my-3 d-grid gap-2 col-12">
-          <button type="submit" class="but btn btn-success">Enviar</button>
-        </div>
-
-        <div class="container col-sm-12">
-          <a th:href="@{/login}" class="link-danger">¿Ya estas registrado? Iniciar Sesión</a>
-        </div>
-      </div>
-
-    </form>
 
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-  crossorigin="anonymous"></script>
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
