--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -96,6 +96,10 @@ color:white
   font-family: 'Pacifico', cursive;  
   text-shadow: 2px 2px rgba(0,0,0,0.3);   
 }
+
+.duracion{
+  color: black;
+}
 /* Facu */
 .vista-reloj {
   background-color: #9df3c4;
