--- a/src/main/resources/templates/vistaPrincipal.html
+++ b/src/main/resources/templates/vistaPrincipal.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Google Font Pacifico -->
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-  rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="../static/css/styles.css" th:href="@{/css/styles.css}">
@@ -23,10 +22,10 @@
       <a class="fs-2 btn butG btn-success">
         <div class="row">
           <div class="col-1">
-            <img src="../static/img/sol.png" th:src="@{/img/sol.png}" alt="flecha" class="imagen-box">
+            <img src="../static/img/sol.png" th:src="@{/img/sol.png}" alt="sol" class="imagen-box">
           </div>
           <div class="col-11">
-            <imput class="but-principal" th:href="@{/tarea/hoy(usuario_id=__${session.usuarioSession.id}__)}">Hoy
+            <imput class="but-principal" th:href="@{/tarea/hoy(usuario_id=_${session.usuarioSession.id}_)}">Hoy
             </imput>
           </div>
         </div>
@@ -69,15 +68,7 @@
       <a class="fs-2 btn butG btn-success">
         <div class="row">
           <div class="col-1">
-            <img src="../static/img/check.png" th:src="@{/img/check.png}" alt="check" class="imagen-box">
-          </div>
-          <div class="col-11">
-            <a th:action="@{/.......}" method="post" class="titulo linkeable link-success ">Completado</a>
-            <STYLE>
-              A {
-                text-decoration: none;
-              }
-            </STYLE>
+            <img src="../static/img/chek.png" th:src="@{/img/chek.png}" alt="chek" class="imagen-box">
           </div>
           <div class="col-11">
             <imput class="but-principal" th:href="@{/tarea/completado}" method="get">Completado</imput>
@@ -98,8 +89,8 @@
                   <img src="../static/img/tarea.png" th:src="@{/img/tarea.png}" alt="tarea" class="imagen-box">
                 </div>
                 <div class="col-11">
-                  <imput th:href="@{/tarea/(proyecto_id=__${proyecto.id}__)}" method="get" th:text="${proyecto.nombre}"
-                    class="but-principal" th:href="@{/tarea/completado}" method="get">Tareas
+                  <imput th:href="@{/tarea/(proyecto_id=_${proyecto.id}_)}" method="get" th:text="${proyecto.nombre}"
+                    class="but-principal" method="get">Tareas
                   </imput>
                 </div>
               </div>
@@ -129,7 +120,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
                   <div class="modal-body my-3">
-                    <form th:action="@{/proyecto/nuevo(usuario_id=__${session.usuarioSession.id}__)}" method="post">
+                    <form th:action="@{/proyecto/nuevo(usuario_id=_${session.usuarioSession.id}_)}" method="post">
                       <div>
                         <p th:if="${error!=null}" th:text="${error}"></p>
                       </div>
@@ -151,23 +142,14 @@
               </div>
             </div>
           </div>
-          <div class="col-11">
-            <a th:action="@{/.......}" method="post" class="titulo linkeable link-success ">Nuevo Proyecto</a>
-            <STYLE>
-              A {
-                text-decoration: none;
-              }
-            </STYLE>
-          </div>
         </div>
       </a>
     </div>
   </div>
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-    </div>
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </html>
