--- a/src/main/resources/templates/vistaPrincipal.html
+++ b/src/main/resources/templates/vistaPrincipal.html
@@ -82,6 +82,7 @@
     <table>
       <tbody>
         <tr th:each="proyecto : ${proyectos}">
+          <br>
           <div class="col-9 container">
             <a class="fs-2 btn butG btn-success">
               <div class="row">
@@ -90,7 +91,7 @@
                 </div>
                 <div class="col-11">
                   <imput th:href="@{/tarea/(proyecto_id=__${proyecto.id}__)}" method="get" th:text="${proyecto.nombre}"
-                    class="but-principal" th:href="@{/tarea/completado}" method="get">Tareas
+                    class="but-principal">Tareas
                   </imput>
                 </div>
               </div>
@@ -109,43 +110,49 @@
             <img src="../static/img/mas.png" th:src="@{/img/mas.png}" alt="mas" class="imagen-box">
           </div>
           <div class="col-11">
-            <imput class="but-principal">Nuevo Proyecto</imput>
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-              aria-hidden="true">
-              <div class="modal-dialog">
-                <div class="modal-content borderedit">
-                  <div class="modal-header">
-                    <h5 class="modal-title fs-2 text marca text-decoration-underline" id="exampleModalLabel">Nuevo
-                      Proyecto</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                  </div>
-                  <div class="modal-body my-3">
-                    <form th:action="@{/proyecto/nuevo(usuario_id=__${session.usuarioSession.id}__)}" method="post">
-                      <div>
-                        <p th:if="${error!=null}" th:text="${error}"></p>
-                      </div>
-                      <div class="col mb-1">
-                        <label for="inputname" class="col-sm-6 col-form-label pre-control">Nombre
-                          del proyecto:</label>
-                        <div class="col-sm-12 borderbox">
-                          <input type="text" class="form-control" id="Nombre" name="nombre">
-                        </div>
-
-                        <div class="col mt-4">
-                          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
-                          <button type="submit" class="btn btn-success">Aceptar</button>
-                        </div>
-                      </div>
-                    </form>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <imput class="but-principal">Nuevo Proyecto
+            </imput>
           </div>
         </div>
       </a>
     </div>
+
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content borderedit">
+          <div class="modal-header">
+            <h5 class="modal-title fs-2 text marca text-decoration-underline" id="exampleModalLabel">Nuevo
+              Proyecto</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body my-3">
+            <form th:action="@{/proyecto/nuevo(usuario_id=__${session.usuarioSession.id}__)}" method="post">
+              <div>
+                <p th:if="${error!=null}" th:text="${error}"></p>
+              </div>
+              <div class="col mb-1">
+                <label for="inputname" class="col-sm-6 col-form-label pre-control">Nombre
+                  del proyecto:</label>
+                <div class="col-sm-12 borderbox">
+                  <input type="text" class="form-control" id="Nombre" name="nombre">
+                </div>
+
+                <div class="col mt-4">
+                  <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
+                  <button type="submit" class="btn btn-success">Aceptar</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
   </div>
+
+
 
 </body>
 
