--- a/src/main/resources/templates/vistaPrincipal.html
+++ b/src/main/resources/templates/vistaPrincipal.html
@@ -15,18 +15,19 @@
 </head>
 
 <body class="bodyIndex">
+  <nav th:replace="template.html :: nav"></nav>
 
   <div class="borderedit container col-9 px-8 py-5 my-4 ">
 
     <div class="col-9 container">
-      <a class="fs-2 btn butG btn-success">
+      <a class="fs-2 btn butG btn-success" th:href="@{/tarea/hoy(usuario_id=__${session.usuarioSession.id}__)}">
         <div class="row">
           <div class="col-1">
             <img src="../static/img/sol.png" th:src="@{/img/sol.png}" alt="sol" class="imagen-box">
           </div>
           <div class="col-11">
-            <imput class="but-principal" th:href="@{/tarea/hoy(usuario_id=_${session.usuarioSession.id}_)}">Hoy
-            </imput>
+            <div class="but-principal">Hoy
+            </div>
           </div>
         </div>
       </a>
@@ -35,13 +36,13 @@
     <br>
 
     <div class="col-9 container">
-      <a class="fs-2 btn butG btn-success">
+      <a class="fs-2 btn butG btn-success" th:href="@{/tarea/mañana(usuario_id=__${session.usuarioSession.id}__)}" method="get">
         <div class="row">
           <div class="col-1">
             <img src="../static/img/flecha.png" th:src="@{/img/flecha.png}" alt="flecha" class="imagen-box">
           </div>
           <div class="col-11">
-            <imput class="but-principal" th:href="@{/tarea/mañana}" method="get">Mañana</imput>
+            <div class="but-principal">Mañana</div>
           </div>
         </div>
       </a>
@@ -50,13 +51,13 @@
     <br>
 
     <div class="col-9 container">
-      <a class="fs-2 btn butG btn-success">
+      <a class="fs-2 btn butG btn-success" th:href="@{/tarea/proximo(usuario_id=__${session.usuarioSession.id}__)}" method="get">
         <div class="row">
           <div class="col-1">
             <img src="../static/img/calendario.png" th:src="@{/img/calendario.png}" alt="calendario" class="imagen-box">
           </div>
           <div class="col-11">
-            <imput class="but-principal" th:href="@{/tarea/proximo}" method="get">Próximo</imput>
+            <div class="but-principal" >Próximo</div>
           </div>
         </div>
       </a>
@@ -65,13 +66,13 @@
     <br>
 
     <div class="col-9 container">
-      <a class="fs-2 btn butG btn-success">
+      <a class="fs-2 btn butG btn-success" th:href="@{/tarea/completado(usuario_id=__${session.usuarioSession.id}__)}" method="get">
         <div class="row">
           <div class="col-1">
             <img src="../static/img/chek.png" th:src="@{/img/chek.png}" alt="chek" class="imagen-box">
           </div>
           <div class="col-11">
-            <imput class="but-principal" th:href="@{/tarea/completado}" method="get">Completado</imput>
+            <div class="but-principal" >Completado</div>
           </div>
         </div>
       </a>
@@ -84,15 +85,15 @@
         <tr th:each="proyecto : ${proyectos}">
           <br>
           <div class="col-9 container">
-            <a class="fs-2 btn butG btn-success">
+            <a class="fs-2 btn butG btn-success" th:href="@{/tarea/(proyecto_id=__${proyecto.id}__)}" method="get">
               <div class="row">
                 <div class="col-1">
                   <img src="../static/img/tarea.png" th:src="@{/img/tarea.png}" alt="tarea" class="imagen-box">
                 </div>
                 <div class="col-11">
-                  <imput th:href="@{/tarea/(proyecto_id=__${proyecto.id}__)}" method="get" th:text="${proyecto.nombre}"
+                  <div th:text="${proyecto.nombre}"
                     class="but-principal">Tareas
-                  </imput>
+                </div>
                 </div>
               </div>
             </a>
