--- a/src/main/resources/templates/vistaPrincipal.html
+++ b/src/main/resources/templates/vistaPrincipal.html
@@ -105,7 +105,7 @@
     <br>
 
     <div class="col-9 container ">
-      <a class="fs-2 btn butG btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
+      <a class="fs-2 btn butG btn-success" data-bs-toggle="modal" data-bs-target="#nuevoProyecto">
         <div class="row">
           <div class="col-1">
             <img src="../static/img/mas.png" th:src="@{/img/mas.png}" alt="mas" class="imagen-box">
@@ -119,11 +119,11 @@
     </div>
 
 
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="nuevoProyecto" tabindex="-1" aria-labelledby="nuevoProyecto" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content borderedit">
           <div class="modal-header">
-            <h5 class="modal-title fs-2 text marca text-decoration-underline" id="exampleModalLabel">Nuevo
+            <h5 class="modal-title fs-2 text marca text-decoration-underline" id="nuevoProyecto">Nuevo
               Proyecto</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
