--- a/src/main/resources/templates/configuracion.html
+++ b/src/main/resources/templates/configuracion.html
@@ -40,7 +40,7 @@
     </div>
     <br>
     <br>
-
+<form th:action="@{/configuracion/guardar}" method="post">
     <div class="col-9 container borderbox-box">
       <div class="row">
         <div class="col justify-content-center mt-2">
@@ -220,6 +220,23 @@
 
     </div>
   </div>
+<br>
+  
+    <div class="d-grid gap-2 col-2 mx-auto">
+      <button class="btn btn-primary btn-success" type="submit">Guardar Cambios</button>
+    </div>
+  
+</form>
+
 </div>
 
 <br>
+
+
+  
+</body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+</html>
