--- a/src/main/resources/templates/tareas.html
+++ b/src/main/resources/templates/tareas.html
@@ -48,7 +48,7 @@
                                                 aria-label="Close"></button>
                                         </div>
                                         <div class="modal-body my-3">
-                                            <form th:action="@{.....}" method="post">
+                                            <form th:action="@{/tarea/nueva(vista=__${vista}__)}" method="post">
                                                 <div>
                                                     <p th:if="${error!=null}" th:text="${error}"></p>
                                                 </div>
