--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -72,7 +72,7 @@
                                                             <label for="inputname"
                                                                 class="col-sm-2 col-form-label pre-control">Nombre</label>
                                                             <div class="col-sm-12 borderbox">
-                                                                <input type="text" class="form-control" id="nombre"
+                                                                <input type="text" class="form-control text-secondary" id="nombre"
                                                                     name="nombre" th:text="${session.usuarioSession.nombre}">
                                                             </div>
                                                         </div>
@@ -80,7 +80,7 @@
                                                             <label for="inputfirstname"
                                                                 class="col-sm-2 col-form-label pre-control">Apellido</label>
                                                             <div class="col-sm-12 borderbox">
-                                                                <input type="text" class="form-control" id="apellido"
+                                                                <input type="text" class="form-control text-secondary" id="apellido"
                                                                     name="apellido" th:text="${session.usuarioSession.apellido}">
                                                             </div>
                                                         </div>
@@ -88,7 +88,7 @@
                                                             <label for="inputemail"
                                                                 class="col-sm-2 col-form-label pre-control">Email</label>
                                                             <div class="col-sm-12 borderbox">
-                                                                <input type="email" class="form-control" id="email"
+                                                                <input type="email" class="form-control text-secondary" id="email"
                                                                     th:text="${session.usuarioSession. mail}" disabled>
                                                             </div>
                                                         </div>
