--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -73,7 +73,7 @@
                                                                 class="col-sm-2 col-form-label pre-control">Nombre</label>
                                                             <div class="col-sm-12 borderbox">
                                                                 <input type="text" class="form-control" id="nombre"
-                                                                    name="nombre" th:text="${session.usuarioSession.nombre}">
+                                                                    name="nombre" th:value="${session.usuarioSession.nombre}">
                                                             </div>
                                                         </div>
                                                         <div class="col mb-1">
@@ -81,7 +81,7 @@
                                                                 class="col-sm-2 col-form-label pre-control">Apellido</label>
                                                             <div class="col-sm-12 borderbox">
                                                                 <input type="text" class="form-control" id="apellido"
-                                                                    name="apellido" th:text="${session.usuarioSession.apellido}">
+                                                                    name="apellido" th:value="${session.usuarioSession.apellido}">
                                                             </div>
                                                         </div>
                                                         <div class="col mb-1">
@@ -89,7 +89,7 @@
                                                                 class="col-sm-2 col-form-label pre-control">Email</label>
                                                             <div class="col-sm-12 borderbox">
                                                                 <input type="email" class="form-control" id="email"
-                                                                    th:text="${session.usuarioSession. mail}" disabled>
+                                                                    th:value="${session.usuarioSession. mail}" disabled>
                                                             </div>
                                                         </div>
                                                         <div class="col mb-1">
